(test
 (name engine_tests)
 (libraries ounit2 engine game))

(test
 (name game_tests)
 (libraries ounit2 game))

(test
 (name obstacle_tests)
 (libraries ounit2 engine game))

 (test
 (name attack_tests)
 (libraries ounit2 engine game))

  (test
 (name enemy_tests)
 (libraries ounit2 engine game))

(test
 (name modifier_tests)
 (libraries ounit2 engine game))

(test
 (name end_to_end_tests)
 (libraries ounit2 engine game procgen))

(test
 (name player_tests)
 (libraries ounit2 engine game))


